# cochain

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
demos/: demo_spectral_geometry.ipynb  demo_spectral_geometry_v2.py  demo_spectral_geometry_v3.py
docs/theory/eigensolver_gradient/: eigensolver_gradient.tex
docs/theory/linear_solver_gradient/: linear_solver_gradient.tex
src/cochain/: __init__.py  complex.py  data.py  datasets.py  geometry.py
src/cochain/cochain/: __init__.py  discretize.py  int_prod.py  interpolate.py
src/cochain/cochain/ext_prod/: __init__.py  _face_perm_lut.py  _triple_prod_m_form.py  _whitney_3_form.py  _whitney_m_form.py  _whitney_utils.py  cup.py  whitney.py
src/cochain/cochain/interpolate/: __init__.py  _bary_whitney_tet.py  _bary_whitney_tri.py  _tet.py  _tri.py
src/cochain/cochain/music_ops/: __init__.py  _galerkin.py  _galerkin_element.py  _galerkin_vertex.py  _geometric.py  _geometric_element.py  _geometric_vertex.py  _local_element.py  _local_vertex.py  galerkin.py  geometric.py  local.py
src/cochain/cochain/product/: _whitney_3_form.py  _whitney_m_form.py  _whitney_utils.py  cup.py
src/cochain/data/: simplicial_mesh.py
src/cochain/datasets/: synthetic_tet_meshes.py  synthetic_tri_meshes.py
src/cochain/experimental/: tet_jacobians.py  tri_jacobians.py
src/cochain/geometry/: README.md  cotan_laplacian.py  geom_laplacians.py  hodge_stars.py  laplacians.py  stiffness.py
src/cochain/geometry/de_rham/: __init__.py
src/cochain/geometry/tet/: README.md  tet_geometry.py  tet_hodge_stars.py  tet_laplacians.py  tet_mass.py  tet_mass_2.py  tet_masses.py  tet_stiffness.py
src/cochain/geometry/tet_mesh/: tet_stiffness.py
src/cochain/geometry/tri/: _tri_geometry.py  tri_geometry.py  tri_hodge_stars.py  tri_laplacians.py  tri_masses.py  tri_stiffness.py
src/cochain/geometry/tri_mesh/: geom_laplacians.py  hodge_stars.py  tri_hodge_stars.py  tri_laplacians.py
src/cochain/metric/tet/: _mixed_sparse_operator.py  _mixed_weak_laplacian_operator.py  _tet_geometry.py  tet_hodge_stars.py  tet_laplacians.py  tet_masses.py  tet_stiffness.py
src/cochain/metric/tri/: _tri_geometry.py  tri_hodge_stars.py  tri_laplacians.py  tri_masses.py  tri_stiffness.py
src/cochain/operators/: laplacian.py
src/cochain/product/: _face_lut.py  _face_perm_lut.py  _moments.py  _perm_lut.py  _routers.py  _whitney_3_form.py  _whitney_m_form.py  _whitney_utils.py  cup.py  whitney.py
src/cochain/sparse/: _base_operator.py  _diag_operator.py  _index.py  _matmul.py  _sp_operator.py  _sp_topo.py  _utils.py  diag_operator.py  functional.py  operator.py  operators.py  sp_operator.py  tensor.py  utils.py
src/cochain/sparse/decoupled_tensor/: __init__.py  _base_decoupled_tensor.py  _conversion.py  _diag_decoupled_tensor.py  _index.py  _matmul.py  _pattern.py  _sparse_decoupled_tensor.py  _spgemm_plan.py  _spsp_mm_plan.py  base_decoupled_tensor.py  diag_decoupled_tensor.py  pattern.py  sparse_decoupled_tensor.py
src/cochain/sparse/linalg/: __init__.py  _cupy_eigsh_operators.py  _eigsh_utils.py  _lobpcg_operators.py  _lobpcg_routines.py  cupy_eigsh_wrapper.py  eigsh.py  lobpcg.py  nvmath_wrapper.py  scipy_eigsh_wrapper.py  splu_wrapper.py
src/cochain/sparse/operators/: __init__.py  _base_operator.py  _diag_operator.py  _matmul.py  _sp_operator.py  _sp_topo.py
src/cochain/topology/: betti.py  boundaries.py  coboundaries.py  coboundary.py  morse.py  spanning_tree.py  tet_topology.py  topo_laplacians.py  tri_topology.py
src/cochain/utils/: bary_coords.py  constants.py  faces.py  linalg.py  parsing.py  perm_parity.py  quadrature.py  search.py  sparse_solver.py  stream.py
src/cochain/vis/: __init__.py  backend_base.py  backend_polyscope.py  backend_pyvista.py  polyscope.py  visualizer.py
tests/: conftest.py  test_complex.py  test_cotan_laplacian.py  test_hodge_stars.py  test_laplacians.py  test_stiffness.py
tests/cochain/: test_discretize.py  test_int_prod.py  test_interpolate.py  test_music_ops.py
tests/cochain/ext_prod/: test_cup.py  test_whitney.py
tests/cochain/product/: test_cup.py  test_whitney.py
tests/experimental/: test_tet_jacobians.py  test_tri_jacobians.py
tests/geometry/: test_geom_laplacians.py  test_hodge_stars.py  test_laplacians.py  test_stiffness.py
tests/geometry/tet/: test_tet_hodge_stars.py  test_tet_laplacians.py  test_tet_mass.py  test_tet_stiffness.py
tests/geometry/tri/: test_tri_geometry.py  test_tri_hodge_stars.py  test_tri_laplacians.py  test_tri_masses.py  test_tri_stiffness.py
tests/geometry/tri_mesh/: test_geom_laplacians.py  test_hodge_stars.py  test_stiffness.py
tests/metric/tet/: test_tet_hodge_stars.py  test_tet_laplacians.py  test_tet_mass.py  test_tet_masses.py  test_tet_stiffness.py
tests/metric/tri/: test_tri_geometry.py  test_tri_hodge_stars.py  test_tri_laplacians.py  test_tri_masses.py  test_tri_stiffness.py
tests/product/: test_cup.py  test_whitney.py
tests/sparse/: conftest.py  test_diag_operator.py  test_matmul.py  test_operator.py  test_sp_operator.py  test_sp_topo.py  test_utils.py
tests/sparse/decoupled_tensor/: test_diag_decoupled_tensor.py  test_matmul.py  test_pattern.py  test_sp_operator.py  test_sparse_decoupled_tensor.py
tests/sparse/linalg/: conftest.py  test_nvmath_wrapper.py  test_splu_wrapper.py
tests/sparse/linalg/eigen/: conftest.py  test_cupy_eigsh_wrapper.py  test_eigsh_dependency.py  test_lobpcg.py  test_lobpcg_dependency.py  test_scipy_eigsh_wrapper.py  test_utils.py
tests/sparse/linalg/solvers/: test_cupy_dependency.py  (+9 more)
tests/sparse/operators/: test_diag_operator.py  test_matmul.py  test_sp_operator.py  test_sp_topo.py
tests/topology/: test_betti.py  test_boundaries.py  test_coboundaries.py  test_coboundary.py  test_morse.py  test_spanning_tree.py  test_topo_laplacians.py
tests/utils/: test_quadrature.py
tests/vis/: test_backend_polyscope.py  test_polyscope.py  test_polyscope_dependency.py
theory/eigensolver_gradient/: eigensolver_gradient.tex
theory/galerkin_wedge_product/: whitney_wedge.tex
(+38 files in other folders)
