[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cochain"
version = "0.1.0"
description = "Differentiable operators for computational topology and DEC."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "jaxtyping>=0.3.3",
    "numpy>=2.3.4",
    "pytetwild>=0.1.1",
    "pyvista[jupyter]>=0.46.4",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[project.optional-dependencies]
cuda12 = [
    "cupy-cuda12x",
    "nvmath-python[cu12]>=0.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "libigl>=2.6.1",
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "scikit-fem>=11.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
extend-select = ["D"]
extend-ignore = [
    "F722", # Allows jaxtyping literal string shapes
    "E741", # Allows ambiguous variable names
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"