[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "cochain"
version = "0.1.0"
description = "Differentiable operators for computational topology and DEC."
authors = [
  {name = "Lu Hong", email = "honglu88@gmail.com"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "jaxtyping>=0.3.3",
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",    
]

[project.urls]
Repository = "https://github.com/luhong88/cochain.git"

[project.optional-dependencies]
vis = [
    "polyscope>=2.2.0",
]
examples = [
    "pytetwild>=0.1.0",
    "pyvista[jupyter]>=0.43.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "libigl>=2.6.1",
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "scikit-fem>=11.0.0",
    "torch>=2.4.0",
    "cupy-cuda12x",
    "nvmath-python[cu12]>=0.5.0",
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
extend-select = ["D"]
extend-ignore = [
    "F722", # Allows jaxtyping literal string shapes
    "E741", # Allows ambiguous variable names
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.tox]
requires = ["tox>=4.19", "tox-uv>=1.3"]
env_list = ["py313-latest", "py311-lowest"]

[tool.tox.env_run_base]
description = "Test suite running under {base_python}."
dependency_groups = ["dev"]
extras = [
    "vis",
    "examples"
]
package = "editable"
passenv = ["*"]
commands = [
    ["pytest", "{posargs}"] 
]

[tool.tox.env."py311-lowest"]
description = "Boundary test: Python 3.11 with minimum allowed dependencies."
uv_sync_locked = false
uv_sync_flags = ["--resolution=lowest-direct"]
